--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,18 @@ wp-content/plugins/*
 
 wp-content/themes/*
 !wp-content/themes/webzine/
+
+# -- OS generated files
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
+*.swp
+*.swo
+*.lnk
+*~
+*.swp
+*.swo
+
+# -- ignore cache
+.sass-cache
